
syntax = "proto3";
package cacti.satp.v02;

import "cacti/satp/v02/common/common_messages.proto";

message TransferProposalClaimsRequest {
  cacti.satp.v02.common.MessageType message_type = 1;
  cacti.satp.v02.common.TransferClaims transfer_claims = 2;
}

// TODO
message TransferProposalClaimsResponse {
  cacti.satp.v02.common.MessageType message_type = 1;
}

service SatpStage0Service {
  // util RPCs

  // step RPCs
  rpc TransferProposalClaims(TransferProposalClaimsRequest) returns (TransferProposalClaimsResponse) {};
  // todo other rpcs
}